--- a/Admin Panel/css/style.css
+++ b/Admin Panel/css/style.css
@@ -351,7 +351,7 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: 60px;
+  min-height: 60px;
   position: relative;
   padding: 0;
   width: 100%;
