--- a/Admin Panel/sass/style.scss
+++ b/Admin Panel/sass/style.scss
@@ -208,7 +208,7 @@ body {
       a {
         position: relative;
         display: flex;
-        height: 60px;
+        min-height: 60px;
         position: relative;
         padding: 0;
         width: 100%;
