User Frontend - User Dashboard Done

--- a/Frontend/sass/_general.scss
+++ b/Frontend/sass/_general.scss
@@ -140,7 +140,7 @@ sans-serif;
   box-sizing: border-box;
   color: $black;
   font-weight: 800;
-  border-top: 1px solid #00919947;
+  border-top: 1px solid #E5E5E5;
 
   a {
     color: $black;
@@ -150,7 +150,7 @@ sans-serif;
 
 .table tbody td {
   color: $black;
-  border-color: #00919947;
+  border-color: #E5E5E5;
   // border-bottom: 0;
   // border-top: 0;
   font-family: $font;
