--- a/Frontend/css/style.css
+++ b/Frontend/css/style.css
@@ -147,7 +147,7 @@
           box-sizing: border-box;
   color: #000000;
   font-weight: 800;
-  border-top: 1px solid #00919947;
+  border-top: 1px solid #E5E5E5;
 }
 
 .table tfoot th a {
@@ -156,7 +156,7 @@
 
 .table tbody td {
   color: #000000;
-  border-color: #00919947;
+  border-color: #E5E5E5;
   font-family: "Nunito", sans-serif;
   font-size: 13px;
   height: 60px;
@@ -1630,6 +1630,22 @@ body {
   }
 }
 
+.main-content .main-content-header .main-content-header__user-info h3 {
+  font-family: "Nunito", sans-serif;
+  font-size: 20px;
+  line-height: 140%;
+  margin-bottom: 0;
+}
+
+.main-content .main-content-header .main-content-header__user-info h3 span {
+  font-weight: 700;
+}
+
+.main-content .main-content-header .main-content-header__user-info .main-content-header__user-info__logout {
+  font-family: "Nunito", sans-serif;
+  font-size: 12px;
+}
+
 .main-content.use-background {
   background-color: #DDEFF0;
   background-image: url(../images/background.png);
@@ -1984,25 +2000,22 @@ body {
   text-transform: uppercase;
 }
 
-@media (min-width: 992px) {
-  .main-content .chart-container {
-    -webkit-box-flex: 0;
-        -ms-flex: 0 0 210px;
-            flex: 0 0 210px;
-    height: 210px;
-  }
-}
-
 .main-content .chart-container .chart-content {
   position: relative;
   margin: 0 auto;
+  width: 114px;
+}
+
+@media (max-width: 767px) {
+  .main-content .chart-container .chart-content {
+    width: 80px;
+  }
 }
 
 .main-content .chart-container .chart-content-info {
   position: absolute;
-  width: 110px;
-  height: 110px;
-  background-color: #fff;
+  width: 78px;
+  height: 78px;
   border-radius: 80px;
   text-align: center;
   display: -webkit-box;
@@ -2029,13 +2042,20 @@ body {
 }
 
 .main-content .chart-container .chart-content-info__content b {
-  font-size: 26px;
-  font-weight: 900;
+  font-size: 30px;
+  font-weight: 700;
   line-height: 100%;
+  color: #ffffff;
 }
 
 .main-content .chart-container .chart-content-info__content b span {
   font-size: 12px;
+}
+
+@media (max-width: 767px) {
+  .main-content .chart-container .chart-content-info__content b {
+    font-size: 20px;
+  }
 }
 
 .main-content .chart-container .chart-content-info__content div {
@@ -2047,11 +2067,6 @@ body {
 
 .main-content .chart-container .chart-content-info__content div span {
   font-size: 11px;
-}
-
-.main-content .chart-container {
-  width: 210px;
-  height: 210px;
 }
 
 .main-content .data-table-container {
@@ -2329,7 +2344,7 @@ body {
 
 .main-content .data-table-container .table tbody td {
   color: #000000;
-  border-color: 1px solid #00919947 !important;
+  border-color: 1px solid #E5E5E5 !important;
   font-family: "Nunito", sans-serif;
   font-size: 13px;
   height: 60px;
@@ -3383,5 +3398,464 @@ select {
     transform: scale(1);
     opacity: 0.1;
   }
+}
+
+.main-admin-user {
+  background-color: #F0F7F7;
+  min-height: 200px;
+  border-radius: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  overflow: hidden;
+}
+
+@media (max-width: 767px) {
+  .main-admin-user {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
+.main-admin-user .main-admin-user__nav {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 260px;
+          flex: 0 0 260px;
+  background-color: #009199;
+}
+
+@media (max-width: 767px) {
+  .main-admin-user .main-admin-user__nav {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 100%;
+            flex: 0 0 100%;
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+    width: 100%;
+  }
+}
+
+.main-admin-user .main-admin-user__nav .nav {
+  max-width: 256px;
+  margin-left: 40px;
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
+@media (max-width: 1400px) {
+  .main-admin-user .main-admin-user__nav .nav {
+    margin-left: 40px;
+    max-width: 230px;
+  }
+}
+
+@media (max-width: 767px) {
+  .main-admin-user .main-admin-user__nav .nav {
+    max-width: 100%;
+    margin-right: 40px;
+  }
+}
+
+.main-admin-user .main-admin-user__nav .nav > li {
+  position: relative;
+  min-height: 65px;
+}
+
+.main-admin-user .main-admin-user__nav .nav > li:first-child span {
+  border-top: 1px solid #005a666e;
+}
+
+.main-admin-user .main-admin-user__nav .nav > li .badge {
+  border-radius: 30px;
+  min-width: 19px;
+  height: 19px;
+  background-color: #2CBF88;
+  position: relative;
+  left: 10px;
+  top: -5px;
+  padding: 0;
+  line-height: 19px;
+}
+
+.main-admin-user .main-admin-user__nav .nav > li:before {
+  content: "";
+  display: block;
+  width: 340px;
+  height: 100%;
+  border-radius: 8px;
+  background-color: #F0F7F7;
+  position: absolute;
+  left: -15px;
+  top: 0;
+  opacity: 0;
+  -webkit-transition: opacity .5s ease-in-out;
+  transition: opacity .5s ease-in-out;
+  z-index: 0;
+}
+
+@media (max-width: 767px) {
+  .main-admin-user .main-admin-user__nav .nav > li:before {
+    width: calc(100% + 15px);
+  }
+}
+
+.main-admin-user .main-admin-user__nav .nav > li ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  background-color: #DCEEEF;
+  position: relative;
+  z-index: 0;
+  overflow: hidden;
+  height: 0;
+}
+
+.main-admin-user .main-admin-user__nav .nav > li ul:before {
+  content: "";
+  display: block;
+  width: 328px;
+  height: 100%;
+  border-bottom-left-radius: 8px;
+  background-color: #DCEEEF;
+  position: absolute;
+  left: -15px;
+  top: 0;
+  opacity: 1;
+  -webkit-transition: opacity .5s ease-in-out;
+  transition: opacity .5s ease-in-out;
+  z-index: 1;
+}
+
+.main-admin-user .main-admin-user__nav .nav > li ul > li {
+  z-index: 1;
+  padding-left: 40px;
+}
+
+.main-admin-user .main-admin-user__nav .nav > li ul > li:last-child span {
+  border-bottom: 0;
+}
+
+.main-admin-user .main-admin-user__nav .nav > li ul > li > a {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  min-height: 60px;
+  position: relative;
+  padding: 0;
+  width: 100%;
+  white-space: nowrap;
+  color: #005A66;
+  position: relative;
+  z-index: 4;
+}
+
+.main-admin-user .main-admin-user__nav .nav > li ul > li > a i:before {
+  position: relative;
+  left: 0px;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  -webkit-transform-origin: center;
+          transform-origin: center;
+  font-size: 14px;
+  -webkit-transition: all .5s ease-in-out;
+  transition: all .5s ease-in-out;
+  opacity: 0;
+}
+
+.main-admin-user .main-admin-user__nav .nav > li ul > li > a span {
+  font-size: 18px;
+  font-weight: 300;
+  position: absolute;
+  width: calc(100% - 10px);
+  left: 10px;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  border-bottom: 1px solid #005a663d;
+  padding-bottom: 15px;
+  padding-top: 15px;
+  -webkit-transition: font-weight .5s ease-in-out;
+  transition: font-weight .5s ease-in-out;
+  font-family: "Nunito", sans-serif;
+  -webkit-transition: all .5s ease-in-out;
+  transition: all .5s ease-in-out;
+}
+
+.main-admin-user .main-admin-user__nav .nav > li ul > li:hover::before, .main-admin-user .main-admin-user__nav .nav > li ul > li.active::before {
+  opacity: 1;
+}
+
+.main-admin-user .main-admin-user__nav .nav > li ul > li:hover > a, .main-admin-user .main-admin-user__nav .nav > li ul > li.active > a {
+  color: #005A66;
+}
+
+.main-admin-user .main-admin-user__nav .nav > li ul > li:hover > a i::before, .main-admin-user .main-admin-user__nav .nav > li ul > li.active > a i::before {
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  opacity: 1;
+  color: #009199;
+}
+
+.main-admin-user .main-admin-user__nav .nav > li ul > li:hover > a span, .main-admin-user .main-admin-user__nav .nav > li ul > li.active > a span {
+  font-weight: 700;
+  -webkit-transform: translate(0, -50%);
+          transform: translate(0, -50%);
+  padding-left: 20px;
+}
+
+.main-admin-user .main-admin-user__nav .nav > li > a {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  min-height: 65px;
+  position: relative;
+  padding: 0;
+  width: 100%;
+  white-space: nowrap;
+  color: #ffffff;
+  font-size: 18px;
+  font-family: "Nunito", sans-serif;
+}
+
+.main-admin-user .main-admin-user__nav .nav > li > a i:before {
+  position: relative;
+  left: 0px;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  font-size: 22px;
+  -webkit-transition: -webkit-transform .5s ease-in-out;
+  transition: -webkit-transform .5s ease-in-out;
+  transition: transform .5s ease-in-out;
+  transition: transform .5s ease-in-out, -webkit-transform .5s ease-in-out;
+}
+
+.main-admin-user .main-admin-user__nav .nav > li > a span {
+  font-size: 18px;
+  font-weight: 300;
+  position: absolute;
+  width: calc(100% - 0px);
+  left: 0px;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  border-bottom: 1px solid #005a666e;
+  padding-bottom: 15px;
+  padding-top: 15px;
+  padding-left: 35px;
+  -webkit-transition: font-weight .5s ease-in-out;
+  transition: font-weight .5s ease-in-out;
+  font-family: "Nunito", sans-serif;
+  -webkit-transition: -webkit-transform .5s ease-in-out;
+  transition: -webkit-transform .5s ease-in-out;
+  transition: transform .5s ease-in-out;
+  transition: transform .5s ease-in-out, -webkit-transform .5s ease-in-out;
+}
+
+.main-admin-user .main-admin-user__nav .nav > li:hover::before, .main-admin-user .main-admin-user__nav .nav > li.active::before {
+  opacity: 1;
+}
+
+.main-admin-user .main-admin-user__nav .nav > li:hover > a, .main-admin-user .main-admin-user__nav .nav > li.active > a {
+  color: #005A66;
+}
+
+.main-admin-user .main-admin-user__nav .nav > li:hover > a i::before, .main-admin-user .main-admin-user__nav .nav > li.active > a i::before {
+  -webkit-transform: translate(5px, -50%);
+          transform: translate(5px, -50%);
+}
+
+.main-admin-user .main-admin-user__nav .nav > li:hover > a span, .main-admin-user .main-admin-user__nav .nav > li.active > a span {
+  font-weight: 700;
+  -webkit-transform: translate(5px, -50%);
+          transform: translate(5px, -50%);
+  border-color: transparent;
+}
+
+.main-admin-user .main-admin-user__content {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  padding: 60px;
+}
+
+@media (max-width: 767px) {
+  .main-admin-user .main-admin-user__content {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+    width: 100%;
+    padding: 60px 20px;
+    padding-top: 30px;
+  }
+}
+
+.main-admin-user .card-content-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 15px;
+}
+
+.main-admin-user .card-content-header h3 {
+  margin-right: auto;
+  font-weight: 700;
+  font-family: "Nunito", sans-serif;
+  font-size: 12px;
+  text-transform: uppercase;
+}
+
+.main-admin-user .card .card-body {
+  padding: 30px;
+}
+
+@media (max-width: 767px) {
+  .main-admin-user .card .card-body {
+    padding: 30px 20px;
+  }
+}
+
+.main-admin-user .card .custom-link {
+  font-weight: 900;
+  font-size: 14px;
+  color: #009199;
+}
+
+.sim-status-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 52px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+@media (max-width: 992px) {
+  .sim-status-container {
+    display: block;
+    text-align: center;
+  }
+}
+
+.sim-status-container .sim-status__img img {
+  width: 187px;
+}
+
+@media (max-width: 992px) {
+  .sim-status-container .sim-status__img img {
+    width: 80px;
+  }
+}
+
+.sim-status-container .sim-status__content {
+  padding-left: 40px;
+}
+
+@media (max-width: 992px) {
+  .sim-status-container .sim-status__content {
+    padding-left: 0;
+  }
+}
+
+.sim-status-container .sim-status__content h3 {
+  margin-bottom: 15px;
+}
+
+@media (max-width: 992px) {
+  .sim-status-container .sim-status__content h3 {
+    margin-top: 20px;
+  }
+}
+
+.box-card-shadow {
+  -webkit-box-shadow: inset 0px -4px 0px rgba(0, 99, 102, 0.1);
+          box-shadow: inset 0px -4px 0px rgba(0, 99, 102, 0.1);
+  border-radius: 10px;
+}
+
+.box-card-green {
+  background-color: #009199;
+  -webkit-box-shadow: inset 0px -4px 0px rgba(0, 99, 102, 0.2);
+          box-shadow: inset 0px -4px 0px rgba(0, 99, 102, 0.2);
+  border-radius: 10px;
+  color: #fff !important;
+}
+
+.box-card-green .custom-link {
+  color: #ffffff !important;
+}
+
+.inline-show-data {
+  line-height: 160%;
+  font-family: "Nunito", sans-serif;
+  font-size: 16px;
+  margin-bottom: 7px;
+}
+
+.inline-show-data b {
+  font-weight: 900;
+  padding-left: 3px;
+}
+
+.dropdown-mobile-nav {
+  width: 100%;
+  background-color: #009199;
+  padding: 16px;
+}
+
+@media (min-width: 768px) {
+  .dropdown-mobile-nav {
+    display: none;
+  }
+}
+
+.dropdown-mobile-nav .dropdown-toggle {
+  display: block;
+  width: 100%;
+  border: 0;
+  background-color: #ffffff;
+  color: #009199;
+  text-align: left;
+  border-radius: 6px;
+  height: 50px;
+  padding: 12px 20px;
+  padding-right: 37px;
+  font-size: 18px;
+  font-weight: 900;
+  font-family: "Nunito", sans-serif;
+  position: relative;
+}
+
+.dropdown-mobile-nav .dropdown-toggle:after {
+  display: block;
+  position: absolute;
+  top: 50%;
+  right: 20px;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  width: 14px;
+  height: 14px;
+  color: transparent;
+  background-image: url(../images/dropdown-mobile-nav.svg);
+  background-size: 14px 7px;
+  z-index: 9;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.dropdown-mobile-nav .dropdown-menu {
+  width: calc(100% - 30px);
+}
+
+.dropdown-mobile-nav .dropdown-menu .dropdown-item {
+  font-size: 18px;
+  font-weight: 700;
+  font-family: "Nunito", sans-serif;
+  color: #005A66;
 }
 /*# sourceMappingURL=style.css.map */
