--- a/Frontend/sass/style.scss
+++ b/Frontend/sass/style.scss
@@ -882,7 +882,21 @@ body {
         justify-content: center;
       }
     }
-
+    .main-content-header__user-info{
+      h3{
+        font-family: $font;
+        font-size: 20px;
+        line-height: 140%;
+        margin-bottom: 0;
+        span{
+          font-weight: 700;
+        }
+      }
+      .main-content-header__user-info__logout{
+        font-family: $font;
+        font-size: 12px;
+      }
+    }
   }
 
   &.use-background {
@@ -1210,20 +1224,24 @@ body {
   .chart-container {
 
     @media (min-width:992px) {
-      flex: 0 0 210px;
-      height: 210px;
+      // flex: 0 0 210px;
+      // height: 210px;
     }
 
     .chart-content {
       position: relative;
       margin: 0 auto;
+      width: 114px;
+      @media (max-width:767px) {
+        width: 80px;
+      }
     }
 
     .chart-content-info {
       position: absolute;
-      width: 110px;
-      height: 110px;
-      background-color: #fff;
+      width: 78px;
+      height: 78px;
+      // background-color: #fff;
       border-radius: 80px;
       text-align: center;
       display: flex;
@@ -1238,12 +1256,15 @@ body {
         justify-content: center;
 
         b {
-          font-size: 26px;
-          font-weight: 900;
+          font-size: 30px;
+          font-weight: 700;
           line-height: 100%;
-
+          color: #ffffff;
           span {
             font-size: 12px;
+          }
+          @media (max-width:767px) {
+            font-size: 20px;
           }
         }
 
@@ -1261,10 +1282,10 @@ body {
     }
   }
 
-  .chart-container {
-    width: 210px;
-    height: 210px;
-  }
+  // .chart-container {
+  //   width: 114px;
+  //   height: 114px;
+  // }
 
   .data-table-container {
     padding: 0 !important;
@@ -1516,7 +1537,7 @@ body {
 
     .table tbody td {
       color: $black;
-      border-color: 1px solid #00919947 !important;
+      border-color: 1px solid #E5E5E5 !important;
       // border-bottom: 0;
       // border-top: 0;
       font-family: $font;
@@ -2667,4 +2688,410 @@ select {
 
 ////////////////////////////////////////////////
 //       Home page hero
+///////////////////////////////////////////////
+
+
+////////////////////////////////////////////////
+//       Main Admin Panel User
+///////////////////////////////////////////////
+
+.main-admin-user{
+  background-color: #F0F7F7;
+  min-height: 200px;
+  border-radius: 10px;
+  display: flex;
+  overflow: hidden;
+  @media (max-width:767px) {
+    flex-wrap: wrap;
+  }
+  .main-admin-user__nav{
+    flex: 0 0 260px;
+    background-color: $green;
+    @media (max-width:767px) {
+      flex: 0 0 100%;
+      order:2;
+      width:100%;
+    }
+    .nav {
+      max-width: 256px;
+
+      margin-left: 40px;
+      padding-top: 40px;
+      padding-bottom: 40px;
+
+      @media(max-width:1400px) {
+        margin-left: 40px;
+        max-width: 230px;
+      }
+
+      @media (max-width:767px) {
+        max-width: 100%;
+        margin-right: 40px;
+      }
+
+      & > li {
+        position: relative;
+        min-height: 65px;
+         &:first-child {
+          span {
+            border-top: 1px solid #005a666e;
+          }
+        }
+        .badge{
+          border-radius: 30px;
+          min-width: 19px;
+          height: 19px;
+          background-color: $green-light;
+          position: relative;
+          left: 10px;
+          top: -5px;
+          padding: 0;
+          line-height: 19px;
+          // padding: 0;
+        }
+        &:before {
+          content: "";
+          display: block;
+          width: 340px;
+          height: 100%;
+          border-radius: 8px;
+          background-color: $page-background;
+          position: absolute;
+          left: -15px;
+          top: 0;
+          opacity: 0;
+          transition: opacity .5s ease-in-out;
+          z-index: 0;
+          @media (max-width:767px) {
+            width: calc(100% + 15px);
+          }
+        }
+        ul{
+          list-style: none;
+          margin: 0;
+          padding: 0;
+          background-color: #DCEEEF;
+          position: relative;
+          z-index: 0;
+          overflow: hidden;
+          height: 0;
+          &:before {
+            content: "";
+            display: block;
+            width: 328px;
+            height: 100%;
+            border-bottom-left-radius: 8px;
+            background-color: #DCEEEF;
+            position: absolute;
+            left: -15px;
+            top: 0;
+            opacity: 1;
+            transition: opacity .5s ease-in-out;
+            z-index: 1;
+          }
+          &> li{
+            z-index: 1;
+            padding-left: 40px;
+            &:last-child{
+              span {
+                border-bottom: 0;
+                }
+            }
+            & > a {
+              position: relative;
+              display: flex;
+              min-height: 60px;
+              position: relative;
+              padding: 0;
+              width: 100%;
+              white-space: nowrap;
+              color: $green-dark;
+              position: relative;
+              z-index: 4;
+
+              i {
+                &:before {
+                  position: relative;
+                  left: 0px;
+                  top: 50%;
+                  transform: translateY(-50%);
+                  transform-origin: center;
+                  font-size: 14px;
+                  transition: all .5s ease-in-out;
+                  opacity: 0;
+                }
+
+
+              }
+
+              span {
+                font-size: 18px;
+                font-weight: 300;
+                position: absolute;
+                width: calc(100% - 10px);
+                left: 10px;
+                top: 50%;
+                transform: translateY(-50%);
+                border-bottom: 1px solid #005a663d;
+                padding-bottom: 15px;
+                padding-top: 15px;
+                transition: font-weight .5s ease-in-out;
+                font-family: $font;
+                transition: all .5s ease-in-out;
+              }
+            }
+            &:hover,
+        &.active {
+          &::before {
+            opacity: 1;
+          }
+          & > a {
+            color: $green-dark;
+            // padding-left: 20px;
+
+            i {
+              &::before {
+                transform: translateY(-50%);
+                opacity: 1;
+                color: $green;
+              }
+
+            }
+
+            span {
+              font-weight: 700;
+              transform: translate(0, -50%);
+              padding-left: 20px;
+              // border-color: transparent;
+            }
+          }
+
+        }
+          }
+
+        }
+        & > a {
+          position: relative;
+          display: flex;
+          min-height: 65px;
+          position: relative;
+          padding: 0;
+          width: 100%;
+          white-space: nowrap;
+          color: $white;
+          font-size: 18px;
+          font-family: $font;
+
+          i {
+            &:before {
+              position: relative;
+              left: 0px;
+              top: 50%;
+              transform: translateY(-50%);
+              font-size: 22px;
+              transition: transform .5s ease-in-out;
+            }
+
+
+          }
+
+          span {
+            font-size: 18px;
+            font-weight: 300;
+            position: absolute;
+            width: calc(100% - 0px);
+            left: 0px;
+            top: 50%;
+            transform: translateY(-50%);
+            border-bottom: 1px solid #005a666e;
+            padding-bottom: 15px;
+            padding-top: 15px;
+            padding-left: 35px;
+            transition: font-weight .5s ease-in-out;
+            font-family: $font;
+            transition: transform .5s ease-in-out;
+          }
+
+
+        }
+
+
+
+        &:hover,
+        &.active {
+
+
+
+          &::before {
+            opacity: 1;
+          }
+          & > a {
+            color: $green-dark;
+            // padding-left: 20px;
+
+            i {
+              &::before {
+                transform: translate(5px, -50%);
+              }
+
+            }
+
+            span {
+              font-weight: 700;
+              transform: translate(5px, -50%);
+              border-color: transparent;
+            }
+          }
+
+        }
+      }
+    }
+  }
+  .main-admin-user__content{
+    flex: 1;
+    padding: 60px;
+    @media (max-width:767px) {
+      order:1;
+      width:100%;
+      padding: 60px 20px;
+      padding-top: 30px;
+    }
+  }
+  .card-content-header {
+    display: flex;
+    margin-bottom: 15px;
+
+    h3 {
+      margin-right: auto;
+      font-weight: 700;
+      font-family: $font;
+      font-size: 12px;
+      text-transform: uppercase;
+
+    }
+  }
+  .card{
+    .card-body{
+      padding: 30px;
+      @media (max-width:767px) {
+        padding: 30px 20px;
+      }
+    }
+    .custom-link{
+      font-weight: 900;
+      font-size: 14px;
+      color: $green;
+    }
+  }
+}
+
+.sim-status-container{
+  display: flex;
+  padding: 52px;
+  align-items: center;
+  @media (max-width:992px) {
+    display: block;
+    text-align: center;
+  }
+  .sim-status__img{
+    img{
+      width: 187px;
+      @media (max-width:992px) {
+        width:80px;
+      }
+    }
+  }
+  .sim-status__content{
+    padding-left: 40px;
+    @media (max-width:992px) {
+      padding-left:0;
+    }
+    h3{
+      margin-bottom: 15px;
+      @media (max-width:992px) {
+        margin-top:20px;
+      }
+    }
+  }
+}
+
+.box-card-shadow{
+  box-shadow: inset 0px -4px 0px rgba(0, 99, 102, 0.1);
+  border-radius: 10px;
+}
+
+.box-card-green{
+  background-color:$green;
+box-shadow: inset 0px -4px 0px rgba(0, 99, 102, 0.2);
+border-radius: 10px;
+color: #fff !important;
+.custom-link{
+  color: $white !important;
+      }
+}
+
+.inline-show-data{
+  line-height: 160%;
+  font-family: $font;
+  font-size: 16px;
+  margin-bottom: 7px;
+  b{
+    font-weight: 900;
+    padding-left: 3px;
+  }
+}
+
+.dropdown-mobile-nav{
+  @media (min-width:768px) {
+    display:none;
+  }
+  width:100%;
+  background-color: $green;
+  padding:16px;
+  .dropdown-toggle{
+    display:block;
+    width:100%;
+    border:0;
+    background-color: $white;
+    color:$green;
+    text-align: left;
+    border-radius: 6px;
+    height:50px;
+    padding:12px 20px;
+    padding-right: 37px;
+    font-size: 18px;
+    font-weight: 900;
+    font-family: $font;
+    position: relative;
+
+    &:after{
+      display: block;
+      position: absolute;
+      top: 50%;
+      right: 20px;
+      transform:translateY(-50%);
+      width: 14px;
+      height: 14px;
+      color: transparent;
+      background-image: url(../images/dropdown-mobile-nav.svg);
+      background-size: 14px 7px;
+      z-index: 9;
+      background-repeat: no-repeat;
+      background-position: center;
+    }
+  }
+  .dropdown-menu{
+    width:calc(100% - 30px);
+    .dropdown-item{
+      font-size: 18px;
+      font-weight: 700;
+      font-family: $font;
+      color:$green-dark;
+    }
+  }
+}
+
+
+////////////////////////////////////////////////
+//       Main Admin Panel User
 ///////////////////////////////////////////////
