--- a/Frontend/css/style.css
+++ b/Frontend/css/style.css
@@ -255,6 +255,14 @@
   line-height: 120%;
 }
 
+.title-5 {
+  font-size: 24px;
+  font-family: "Nunito", sans-serif;
+  font-weight: 800;
+  color: #262626;
+  line-height: 120%;
+}
+
 .subtitle {
   font-size: 20px;
   font-family: "Nunito", sans-serif;
@@ -274,6 +282,25 @@
   font-family: "Nunito", sans-serif;
   color: #000000;
   font-weight: 700;
+}
+
+.subtitle-4 {
+  font-size: 15px;
+  font-family: "Nunito", sans-serif;
+  color: #000000;
+  font-weight: 900;
+}
+
+.text-color-green {
+  color: #009199 !important;
+}
+
+.text-color-green-light {
+  color: #2CBF88 !important;
+}
+
+.text-color-green-dark {
+  color: #005A66 !important;
 }
 
 .text {
@@ -423,6 +450,16 @@
   }
 }
 
+.width-186 {
+  width: 186px;
+}
+
+@media (max-width: 992px) {
+  .width-186 {
+    width: 130px !important;
+  }
+}
+
 .max-width-830 {
   max-width: 830px !important;
   margin-left: auto;
@@ -437,6 +474,10 @@
 
 .min-height-60vh {
   min-width: 60vh;
+}
+
+.height-100 {
+  height: 100%;
 }
 
 .font-24 {
@@ -561,6 +602,12 @@
 
 .steps__item.undone:before, .steps__item.undone:after {
   background-color: #ffffff;
+}
+
+.steps.small .steps__item {
+  width: 43px;
+  height: 43px;
+  font-size: 20px;
 }
 
 .no-border-radius-top {
@@ -803,6 +850,107 @@
     right: inherit;
     left: 0;
   }
+}
+
+.alert-success,
+.alert-danger,
+.alert-warning,
+.alert-info {
+  -webkit-box-shadow: inset 0px -4px 0px rgba(0, 99, 102, 0.2);
+          box-shadow: inset 0px -4px 0px rgba(0, 99, 102, 0.2);
+  border-radius: 10px;
+  color: #ffffff;
+  font-size: 16px;
+  padding: 17px 30px;
+  border: 0;
+  margin-bottom: 30px;
+}
+
+.alert-success i,
+.alert-danger i,
+.alert-warning i,
+.alert-info i {
+  margin-right: 5px;
+}
+
+.alert-success .custom-link,
+.alert-danger .custom-link,
+.alert-warning .custom-link,
+.alert-info .custom-link {
+  color: #ffffff;
+  font-weight: 900;
+}
+
+/* Rectangle 75 */
+.alert.alert-success {
+  background-color: #2CBF88;
+}
+
+.alert.alert-danger {
+  background-color: #ce4444;
+}
+
+.alert.alert-warning {
+  background-color: #f1c22e;
+}
+
+.alert.alert-info {
+  background-color: #16b8d6;
+}
+
+.conect-width-alert {
+  position: relative;
+}
+
+.conect-width-alert::before {
+  position: absolute;
+  top: -37px;
+  left: 50%;
+  content: "";
+  background-color: red;
+  border-bottom: 4px solid;
+  border-right: 4px solid;
+  display: block;
+  width: 20px;
+  height: 20px;
+  -webkit-transform: rotate(45deg) translateX(-50%);
+          transform: rotate(45deg) translateX(-50%);
+}
+
+.conect-width-alert.to-alert-success {
+  border-top: 3px solid #2CBF88;
+}
+
+.conect-width-alert.to-alert-success::before {
+  background-color: #2CBF88;
+  border-color: #22ad81;
+}
+
+.conect-width-alert.to-alert-danger {
+  border-top: 3px solid #ce4444;
+}
+
+.conect-width-alert.to-alert-danger::before {
+  background-color: #ce4444;
+  border-color: #a64c4b;
+}
+
+.conect-width-alert.to-alert-warning {
+  border-top: 3px solid #f1c22e;
+}
+
+.conect-width-alert.to-alert-warning::before {
+  background-color: #f1c22e;
+  border-color: #c2b03e;
+}
+
+.conect-width-alert.to-alert-info {
+  border-top: 3px solid #16b8d6;
+}
+
+.conect-width-alert.to-alert-info::before {
+  background-color: #16b8d6;
+  border-color: #11a7bf;
 }
 
 body {
@@ -2904,7 +3052,7 @@ select {
   background-image: url(../images/select_dropdown.png);
   background-size: 13px;
   background-repeat: no-repeat;
-  background-position: 90% center;
+  background-position: calc(100% - 28px) center;
   padding-right: 25px;
 }
 
@@ -3681,6 +3829,8 @@ select {
       -ms-flex: 1;
           flex: 1;
   padding: 60px;
+  position: relative;
+  z-index: 99;
 }
 
 @media (max-width: 767px) {
@@ -3857,5 +4007,63 @@ select {
   font-weight: 700;
   font-family: "Nunito", sans-serif;
   color: #005A66;
+}
+
+.main-admin-user-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-top: 0px;
+  padding-bottom: 30px;
+}
+
+.main-admin-user-header-center {
+  display: block;
+  text-align: center;
+}
+
+.main-admin-user-header-center .steps {
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-bottom: 20px;
+}
+
+@media (max-width: 767px) {
+  .main-admin-user-header {
+    display: block;
+    text-align: center;
+  }
+  .main-admin-user-header .steps {
+    padding-top: 20px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+.main-admin-user-header .main-content-header__user-info h3 {
+  font-family: "Nunito", sans-serif;
+  font-size: 20px;
+  line-height: 140%;
+  margin-bottom: 0;
+}
+
+.main-admin-user-header .main-content-header__user-info h3 span {
+  font-weight: 700;
+}
+
+.main-admin-user-header .main-content-header__user-info .main-content-header__user-info__logout {
+  font-family: "Nunito", sans-serif;
+  font-size: 12px;
 }
 /*# sourceMappingURL=style.css.map */
