--- a/Frontend/sass/style.scss
+++ b/Frontend/sass/style.scss
@@ -1001,7 +1001,6 @@ body {
 
       select {
         flex: 0 0 100px;
-
         @media (max-width:767px) {
           flex: 0 0 80px;
           width: 80px;
@@ -2140,7 +2139,7 @@ select {
   background-image: url(../images/select_dropdown.png);
   background-size: 13px;
   background-repeat: no-repeat;
-  background-position: 90% center;
+  background-position: calc(100% - 28px) center;
   padding-right: 25px;
 }
 
@@ -2701,6 +2700,7 @@ select {
   border-radius: 10px;
   display: flex;
   overflow: hidden;
+
   @media (max-width:767px) {
     flex-wrap: wrap;
   }
@@ -2950,6 +2950,8 @@ select {
   .main-admin-user__content{
     flex: 1;
     padding: 60px;
+    position: relative;
+  z-index: 99;
     @media (max-width:767px) {
       order:1;
       width:100%;
@@ -3087,6 +3089,52 @@ color: #fff !important;
       font-weight: 700;
       font-family: $font;
       color:$green-dark;
+    }
+  }
+}
+
+.main-admin-user-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 0px;
+  padding-bottom: 30px;
+
+  &-center {
+    display: block;
+    text-align: center;
+
+    .steps {
+      margin-left: auto;
+      margin-right: auto;
+      text-align: center;
+      justify-content: center;
+      margin-bottom: 20px;
+    }
+  }
+
+  @media (max-width:767px) {
+    display: block;
+    text-align: center;
+
+    .steps {
+      padding-top: 20px;
+      justify-content: center;
+    }
+  }
+  .main-content-header__user-info{
+    h3{
+      font-family: $font;
+      font-size: 20px;
+      line-height: 140%;
+      margin-bottom: 0;
+      span{
+        font-weight: 700;
+      }
+    }
+    .main-content-header__user-info__logout{
+      font-family: $font;
+      font-size: 12px;
     }
   }
 }
