--- a/Frontend/sass/_general.scss
+++ b/Frontend/sass/_general.scss
@@ -12,6 +12,10 @@ sans-serif;
   border: 0;
   border-radius: 10px;
 }
+.max-width-960 {
+  max-width: 960px;
+  margin: 0 auto;
+}
 
 .max-width-620 {
   max-width: 620px;
@@ -255,6 +259,14 @@ sans-serif;
   line-height: 120%;
 }
 
+.title-6 {
+  font-size: 16px;
+  font-family: $font;
+  font-weight: 800;
+  color: #262626;
+  line-height: 120%;
+}
+
 .subtitle {
   font-size: 20px;
   font-family: $font;
@@ -304,6 +316,12 @@ sans-serif;
     font-family: $font;
     color: #4D4D4D;
     font-weight: 400;
+  }
+  &-sm-1{
+    font-size: 16px;
+  }
+  &-sm{
+    font-size: 14px;
   }
 }
 
@@ -376,7 +394,16 @@ sans-serif;
   margin-left: auto;
   margin-right: auto;
 }
-
+.max-width-500 {
+  max-width: 500px !important;
+  margin-left: auto;
+  margin-right: auto;
+}
+.max-width-400 {
+  max-width: 400px !important;
+  margin-left: auto;
+  margin-right: auto;
+}
 .max-width-360 {
   max-width: 360px !important;
   margin-left: auto;
@@ -443,7 +470,20 @@ sans-serif;
   }
 
 }
+.width-38 {
+  width: 38px;
 
+  @media (max-width:767px) {
+    width: 38px !important;
+  }
+}
+.width-20 {
+  width: 20px;
+
+  @media (max-width:767px) {
+    width: 20px !important;
+  }
+}
 .max-width-830 {
   max-width: 830px !important;
   margin-left: auto;
@@ -466,6 +506,30 @@ sans-serif;
 
 .font-24 {
   font-size: 24px;
+}
+.font-12{
+  font-size: 12px;
+}
+.font-16{
+  font-size: 16px !important;
+}
+
+.hidden-mobile{
+  @media (max-width:767px) {
+    display: none;
+  }
+}
+.hidden-desktop{
+  @media (min-width:768px) {
+    display: none;
+  }
+}
+.relative{
+  position: relative;
+}
+
+.grayscale{
+  filter: grayscale(100%);
 }
 
 .custom-link {
@@ -716,38 +780,7 @@ sans-serif;
     }
   }
 
-  .sidebard-OS__content__list {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    counter-reset: number;
 
-    li {
-      padding-left: 40px;
-      position: relative;
-      margin-bottom: 15px;
-      min-height: 28px;
-      font-family: $font;
-
-      &:before {
-        position: absolute;
-        left: 0px;
-        top: 3px;
-        counter-increment: number;
-        content: counter(number);
-        width: 28px;
-        height: 28px;
-        display: block;
-        border: 2px solid $green;
-        color: $green;
-        font-family: $font;
-        font-size: 16px;
-        font-weight: 800;
-        text-align: center;
-        border-radius: 30px;
-      }
-    }
-  }
 }
 
 .input-number-count {
@@ -811,7 +844,62 @@ sans-serif;
     }
   }
 }
+.sidebard-OS__content__list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  counter-reset: number;
 
+  li {
+    padding-left: 40px;
+    position: relative;
+    margin-bottom: 15px;
+    min-height: 28px;
+    font-family: $font;
+
+    &:before {
+      background-color: $white;
+      position: absolute;
+      left: 0px;
+      top: 3px;
+      counter-increment: number;
+      content: counter(number);
+      width: 28px;
+      height: 28px;
+      display: block;
+      border: 2px solid $green;
+      color: $green;
+      font-family: $font;
+      font-size: 16px;
+      font-weight: 800;
+      text-align: center;
+      border-radius: 30px;
+      z-index: 9;
+    }
+  }
+  &.add-connect{
+    li{
+      padding-top: 5px;
+      &:after {
+        content: "";
+        position: absolute;
+        left: 14px;
+        top: 20px;
+        width: 1px;
+        height: 100%;
+        display: block;
+        background-color: $green;
+        z-index: 2;
+      }
+      &:last-child{
+        &::after{
+          display: none;
+        }
+      }
+    }
+
+  }
+}
 .alert-success,
 .alert-danger,
 .alert-warning,
@@ -896,5 +984,36 @@ sans-serif;
       background-color: #16b8d6;
       border-color: #11a7bf;
     }
+  }
+}
+
+.divider{
+  border-bottom: 1px dashed $black;
+}
+.important-alert{
+  border-radius: 10px;
+  padding:20px 10px;
+  border:2px solid $green;
+
+  .important-alert__content{
+    max-width: 230px;
+    margin: 0 auto;
+  }
+}
+
+.link-show-alert{
+  font-size: 12px;
+  font-weight: 700;
+  color: $black;
+  &:hover{
+    text-decoration: none;
+    color: $green-light;
+  }
+  i{
+    color: $green-light;
+  }
+  span{
+    padding-bottom: 2px;
+    border-bottom: 1px solid $green-light;
   }
 }
