--- a/Frontend/sass/style.scss
+++ b/Frontend/sass/style.scss
@@ -859,7 +859,19 @@ body {
     align-items: center;
     padding-top: 50px;
     padding-bottom: 40px;
-
+    &.faqs__header{
+      display: flex;
+      min-height: 236px;
+      align-items: center;
+      justify-content: center;
+      background-image: url(../images/faq__background.png);
+      background-repeat: no-repeat;
+      background-size: auto 100%;
+      background-position: center;
+      @media (max-width:992px) {
+        min-height: 108px;
+      }
+    }
     &-center {
       display: block;
       text-align: center;
@@ -871,6 +883,7 @@ body {
         justify-content: center;
         margin-bottom: 20px;
       }
+
     }
 
     @media (max-width:767px) {
@@ -3277,3 +3290,97 @@ color: #fff !important;
 ////////////////////////////////////////////////
 //      Cart
 ///////////////////////////////////////////////
+
+.faqs__content{
+  .card{
+    background-color: $white;
+    margin-bottom: 10px;
+    border-radius: 10px;
+    overflow: hidden;
+    border-left: 4px solid $white;
+    transition: border-left .5s ease-in-out;
+    &.active{
+      border-left: 4px solid $green;
+    }
+    .card-header{
+      background-color: $white;
+      padding-left: 48px;
+      padding-right: 48px;
+      border-bottom: 0;
+      position: relative;
+      @media (max-width:992px) {
+        padding-left: 40px;
+      padding-right: 48px;
+      }
+      a{
+        display: block;
+        padding-bottom: 16px;
+        padding-top: 16px;
+        position: relative;
+        transition: color .5s ease-in-out;
+        svg{
+          position: absolute;
+          top:50%;
+          right: -20px;
+          transform-origin: center;
+          transform: translateY(-50%) rotate(180deg);
+
+          path{
+            transition: stroke .5s ease-in-out;
+            stroke: $green ;
+          }
+        }
+        &:hover{
+          color: $green-light;
+          text-decoration: none;
+          svg{
+            path{
+              stroke: $green ;
+            }
+
+          }
+        }
+        &.collapsed{
+          svg{
+            transform: translateY(-50%) rotate(0deg);
+            path{
+              stroke: $black ;
+            }
+          }
+          &:before{
+            opacity: 0;
+          }
+        }
+        &:before{
+          content: "";
+          display: block;
+          position: absolute;
+          width: 100%;
+          height: 1px;
+          left: 0;
+          bottom: -8px;
+          background-color: $black;
+          opacity: .10;
+          transition: opacity .5s ease-in-out;
+        }
+      }
+    }
+    .card-body{
+      padding-right: 48px;
+      padding-left: 48px;
+      padding-bottom: 40px;
+      @media (max-width:992px) {
+        padding-left: 40px;
+      padding-right: 40px;
+      }
+      a{
+        color: $green-light !important;
+        text-decoration: underline;
+        font-weight: 800;
+      }
+      .text{
+
+      }
+    }
+  }
+}
