--- a/Frontend/css/style.css
+++ b/Frontend/css/style.css
@@ -1490,6 +1490,12 @@ a.btn-primary {
   line-height: 34px;
 }
 
+a.btn-primary.btn-sm {
+  line-height: 36px;
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
 .block-pricing {
   padding-top: 100px;
   padding-bottom: calc(100px - 1.5rem);
