--- a/Frontend/sass/_general.scss
+++ b/Frontend/sass/_general.scss
@@ -136,6 +136,23 @@ sans-serif;
   }
 }
 
+.table-small {
+  width: 100%;
+  td,th{
+    border-top: 1px solid #E5E5E5;
+    padding:5px 0px !important;
+        height: auto !important;
+  }
+  tr{
+    &:first-child{
+      td,th{
+        border-top: 0px solid #E5E5E5;
+
+      }
+    }
+  }
+}
+
 .table thead th {
   border-bottom: 0;
   border-top: 0;
@@ -683,6 +700,17 @@ sans-serif;
             font-size: 20px;
          }
   }
+}
+
+.no-border-top{
+  border-top:0 !important;
+}
+.no-py{
+  padding-top:0 !important;
+  padding-bottom:0 !important;
+}
+.height-auto {
+  height: auto !important;
 }
 
 .no-border-radius-top {
