--- a/Frontend/sass/_general.scss
+++ b/Frontend/sass/_general.scss
@@ -153,6 +153,17 @@ sans-serif;
   }
 }
 
+.no-border-top{
+  border-top:0 !important;
+}
+.no-py{
+  padding-top:0 !important;
+  padding-bottom:0 !important;
+}
+.height-auto {
+  height: auto !important;
+}
+
 .table thead th {
   border-bottom: 0;
   border-top: 0;
